changed title name

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head> 
-     <title> portfolio dummy</title>
+     <title> Kamran's portfolio</title>
      <link rel="stylesheet" type="text/css" href="style1.css">
      <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="http://fonts.googleapis.com/css2?family=Noto+Sans&family=Roboto+Mono&display=swap" rel ="stylesheet" >
