changed folder name
i have pictures in "useful" folder now

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    
         <div class="container"> 
                 <div class="intro">
-                    <img class = "profile-picture" src = "related-material/kz43.jpg" />
+                    <img class = "profile-picture" src = "useful/kz43.jpg" />
                     <h1>Kamran Zafar</h1>
                     <h3> Student at university of okara </h3>
                     <p> "Do what you have to do" </p>
@@ -62,19 +62,19 @@
                 <div class="project-grid">
                 
                     <div class = "project-image-wrapper">
-                        <img  class="project-image" src="related-material/project-1.jpg">
+                        <img  class="project-image" src="useful/project-1.jpg">
                         <h3>Project 1</h3>    
                     </div>
                     <div class = "project-image-wrapper">
-                        <img  class="project-image" src="related-material/project-2.jpg">
+                        <img  class="project-image" src="useful/project-2.jpg">
                         <h3>Project 2</h3>    
                     </div>
                     <div class = "project-image-wrapper">
-                        <img  class="project-image" src="related-material/project-3.jpg">
+                        <img  class="project-image" src="useful/project-3.jpg">
                         <h3>Project 3</h3>    
                     </div>
                     <div class = "project-image-wrapper">
-                        <img  class="project-image" src="related-material/project-4.jpg">
+                        <img  class="project-image" src="useful/project-4.jpg">
                         <h3>Project 4</h3>    
                     </div>
                 </div>
