--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </li>
                    
                     <li>
-                        <a href="#" class="fa fa-facebook"></a>
+                        <a href="#" class="fa fa-facebook">Facebook</a>
 
             
                     </li>
